Refactoring - LC