@@ -5,10 +5,11 @@ import java.util.ArrayList;
 // CLASE "CLIENTE" QUE REPRESENTA A UN MIEMBRO DEL GIMNASIO.
 // HEREDA DE LA CLASE "Persona" Y CONTIENE INFORMACIÓN ADICIONAL COMO PLAN DE MEMBRESÍA, IMC Y MEDIDAS.
 
-public class Cliente extends Persona {
+public class Cliente extends Persona
+{
 	// ATRIBUTOS
 	private int idCliente;
-	private String planMembresía;
+	private String planMembresia;
 	private float imc;
 
 	// CAMBIAMOS LA DECLARACION DE MEDIDAS DE ARRELO A LISTA
@@ -18,16 +19,18 @@ public class Cliente extends Persona {
 
 	// CONSTRUCTOR POR DEFAULT
 	// INICIALIZA UN CLIENTE CON VALORES POR DEFECTO Y UNA LISTA VACÍA DE MEDIDAS.
-	public Cliente() {
+	public Cliente()
+	{
 		super();
 		medidas = new ArrayList<>(); // CREACION DEL OBJETO ARRAYLIST
 	}
 
 	// CONSTRUCTOR ADICIONAL
 	// INICIALIZA UN CLIENTE CON LOS DATOS PROPORCIONADOS COMO NOMBRE, ID, PLAN DE MEMBRESÍA Y FECHA DE NACIMIENTO.
-	public Cliente(String nombre, int idCliente, String planMembresía, String fechaNacimiento) {
+	public Cliente(String nombre, int idCliente, String planMembresia, String fechaNacimiento)
+	{
 		super(nombre, fechaNacimiento);
-		this.planMembresía = planMembresía;
+		this.planMembresia = planMembresia;
 		this.idCliente = idCliente;
 		medidas = new ArrayList<>(); // CREACION DEL OBJETO ARRAYLIST
 	}
@@ -35,7 +38,8 @@ public class Cliente extends Persona {
 	// METODOS
 	// MÉTODO "asignaMedidas":
 	// AGREGA PESO, ALTURA Y GRASA CORPORAL A LA LISTA DE MEDIDAS DEL CLIENTE Y CALCULA SU IMC.
-	public void asignaMedidas(float peso, float altura, float grasa) {
+	public void asignaMedidas(float peso, float altura, float grasa)
+	{
 		medidas.add(peso);
 		medidas.add(altura);
 		medidas.add(grasa);
@@ -45,8 +49,10 @@ public class Cliente extends Persona {
 
 	// MÉTODO "calculaIMC":
 	// CALCULA EL ÍNDICE DE MASA CORPORAL (IMC) DEL CLIENTE BASADO EN SU PESO Y ALTURA.
-	public void calculaIMC() {
-		if (medidas.isEmpty() || medidas.size() < 2) {
+	public void calculaIMC()
+	{
+		if (medidas.isEmpty() || medidas.size() < 2)
+		{
 			imc = 0;
 			return;
 		}
@@ -60,58 +66,90 @@ public class Cliente extends Persona {
 	// GETTERS
 	// MÉTODOS GETTERS:
 	// PERMITEN OBTENER EL ID DEL CLIENTE, SU PLAN DE MEMBRESÍA, IMC, CLASE ASIGNADA Y MEDIDAS.
-	public int getIdCliente() {
-		return idCliente;
-	}
+	public int getIdCliente() { return idCliente; }
 
-	public String getPlanMembresía() {
-		return planMembresía;
-	}
+	public String getPlanMembresia() { return planMembresia; }
 
-	public float getIMC() {
-		return imc;
-	}
+	public float getIMC() { return imc; }
 
-	public Clase getClase() {
-		return suClase;
-	}
+	public Clase getClase() { return suClase; }
 
-	public ArrayList<Float> getMedidas() {
-		return medidas;
-	}
+	public ArrayList<Float> getMedidas() { return medidas; }
 
 	// SETTERS
 	// MÉTODOS SETTERS:
 	// PERMITEN MODIFICAR EL ID DEL CLIENTE, SU PLAN DE MEMBRESÍA Y LA CLASE ASIGNADA.
-	public void setIdCliente(int idCliente) {
-		this.idCliente = idCliente;
-	}
+	public void setIdCliente(int idCliente) { this.idCliente = idCliente; }
 
 	@Override
-	public void setFechaNacimiento(String fechaNacimiento) {
-		super.setFechaNacimiento(fechaNacimiento);
-	}
+	public void setFechaNacimiento(String fechaNacimiento) { super.setFechaNacimiento(fechaNacimiento); }
 
-	public void setPlanMembresía(String planMembresía) {
-		this.planMembresía = planMembresía;
-	}
+	public void setPlanMembresia(String planMembresia) { this.planMembresia = planMembresia; }
 
-	public void setClase(Clase suClase) {
-		this.suClase = suClase;
-	}
+	public void setClase(Clase suClase) { this.suClase = suClase; }
 
 	// GETTERS Y SETTERS ADICIONALES PARA ACCESO ALEATORIO
 	public int getId() { return idCliente; }
+	
 	public void setId(int id) { this.idCliente = id; }
-	public String getTipo() { return planMembresía; }
-	public void setTipo(String tipo) { this.planMembresía = tipo; }
+	
+	public String getTipo() { return planMembresia; }
+	
+	public void setTipo(String tipo) { this.planMembresia = tipo; }
+	
 	public String getFechaNacimiento() { return getfechaNacimiento(); }
-	public int getPeso() { return (medidas.size() > 0) ? Math.round(medidas.get(0)) : 0; }
-	public void setPeso(int peso) { if (medidas.size() > 0) medidas.set(0, (float)peso); else medidas.add((float)peso); calculaIMC(); }
-	public float getAltura() { return (medidas.size() > 1) ? medidas.get(1) : 0; }
-	public void setAltura(float altura) { if (medidas.size() > 1) medidas.set(1, altura); else if (medidas.size() == 1) medidas.add(altura); else { medidas.add(0f); medidas.add(altura); } calculaIMC(); }
-	public int getEdad() { return (medidas.size() > 2) ? Math.round(medidas.get(2)) : 0; }
-	public void setEdad(int edad) { if (medidas.size() > 2) medidas.set(2, (float)edad); else { while (medidas.size() < 2) medidas.add(0f); medidas.add((float)edad); } }
-	public int getExperiencia() { return 0; } // No aplica a Cliente
-	public void setExperiencia(int exp) { /* No aplica a Cliente */ }
+	
+	public int getPeso()
+	{
+		return (!medidas.isEmpty()) ? Math.round(medidas.getFirst()) : 0;
+	}
+	
+	public void setPeso(int peso)
+	{
+		if (!medidas.isEmpty())
+			medidas.set(0, (float)peso);
+		
+		else
+			medidas.add((float)peso);
+		
+		calculaIMC();
+	}
+	
+	public float getAltura()
+	{
+		return (medidas.size() > 1) ? medidas.get(1) : 0;
+	}
+	
+	public void setAltura(float altura)
+	{
+		if (medidas.size() > 1)
+			medidas.set(1, altura);
+		
+		else if (medidas.size() == 1)
+			medidas.add(altura);
+		
+		else
+		{
+			medidas.add(0f);
+			medidas.add(altura);
+		}
+		
+		calculaIMC(); }
+	
+	public int getEdad()
+	{
+		return (medidas.size() > 2) ? Math.round(medidas.get(2)) : 0;
+	}
+	
+	public void setEdad(int edad)
+	{
+		if (medidas.size() > 2)
+			medidas.set(2, (float)edad);
+		else
+		{
+			while (medidas.size() < 2) medidas.add(0f);
+			
+			medidas.add((float)edad);
+		}
+	}
 }
